tests/toy/neg/000973_mutation.toylang
program a = { if a then program a = { } .; } .
